--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,7 +34,7 @@ jobs:
    deploy:
       name: Deploy
       runs-on: ubuntu-latest
-      environment: production
+      # environment: production
 
       steps:
          - name: Checkout
@@ -61,25 +61,25 @@ jobs:
               # Build a docker container and
               # push it to ECR so that it can
               # be deployed to ECS.
-              docker build -t my-docker-image .
-              docker tag my-docker-image:latest public.ecr.aws/s4n3s9y4/my-docker-image:latest
-              docker push public.ecr.aws/s4n3s9y4/my-docker-image:latest
-              # docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-              # docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-              # echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+              # docker build -t my-docker-image .
+              # docker tag my-docker-image:latest public.ecr.aws/s4n3s9y4/my-docker-image:latest
+              # docker push public.ecr.aws/s4n3s9y4/my-docker-image:latest
+              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+              docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+              echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
          - name: Fill in the new image ID in the Amazon ECS task definition
            id: task-def
            uses: aws-actions/amazon-ecs-render-task-definition@v1
            with:
               task-definition: task-definition.json
-              container-name: nextcontainer
+              container-name: ReactAppContainer
               image: ${{ steps.build-image.outputs.image }}
 
          - name: Deploy Amazon ECS task definition
            uses: aws-actions/amazon-ecs-deploy-task-definition@v1
            with:
               task-definition: ${{ steps.task-def.outputs.task-definition }}
-              service: nextser
+              service: ReactService
               cluster: default
               wait-for-service-stability: true
