--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -81,5 +81,5 @@ jobs:
            with:
               task-definition: ${{ steps.task-def.outputs.task-definition }}
               service: ReactService
-              cluster: default
+              cluster: ReactCluster
               wait-for-service-stability: true
