--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -78,8 +78,8 @@ jobs:
            uses: aws-actions/amazon-ecs-deploy-task-definition@v1
            with:
               task-definition: ${{ steps.task-def.outputs.task-definition }}
-              service: ser
-              cluster: clu
+              service: serde
+              cluster: clus
               wait-for-service-stability: true
 
          #  - name: Delete Image after deploy from ECR
