--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,7 +56,8 @@ jobs:
            env:
               ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
               ECR_REPOSITORY: my-docker-image
-              IMAGE_TAG: ${{ github.sha }}
+              # IMAGE_TAG: ${{ github.sha }}
+              IMAGE_TAG: latest
            run: |
               # Build a docker container and
               # push it to ECR so that it can
@@ -78,7 +79,7 @@ jobs:
            uses: aws-actions/amazon-ecs-deploy-task-definition@v1
            with:
               task-definition: ${{ steps.task-def.outputs.task-definition }}
-              service: serde
+              service: serdes
               cluster: clus
               wait-for-service-stability: true
 
