--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,8 +56,7 @@ jobs:
            env:
               ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
               ECR_REPOSITORY: my-docker-image
-              # IMAGE_TAG: ${{ github.sha }}
-              IMAGE_TAG: latest
+              IMAGE_TAG: ${{ github.sha }}
            run: |
               # Build a docker container and
               # push it to ECR so that it can
